samples/_failures_safe/1761613812_b4bef2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_45b5a243.c: In function ‘main’:
./samples/SAFE/__tmp_45b5a243.c:165:20: error: expected ‘)’ at end of input
  165 |         free(tokens
      |             ~      ^
      |                    )
./samples/SAFE/__tmp_45b5a243.c:165:9: error: expected declaration or statement at end of input
  165 |         free(tokens
      |         ^~~~
./samples/SAFE/__tmp_45b5a243.c:165:9: error: expected declaration or statement at end of input
